chore: add personal link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
   {{{ body }}}
 
   <footer class="text-center text-gray-light">
-    <div>Copyright &copy; 2020, Adriane Justine Tan</div>
+    <div>Copyright &copy; 2020, <a href="https://eidoriantan.github.io">@eidoriantan</a></div>
   </footer>
 </body>
 </html>
