refactor: npm install client libraries

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/styles/chat.css">
 
-<script src="/libraries/socket.io/socket.io.js"></script>
+<script src="/libs/socket.io/socket.io.js"></script>
 <script src="/scripts/chat.js"></script>
 
 <main class="d-flex flex-column flex-md-row flex-justify-around m-5">
