--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,8 @@
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/libraries/primer-css/primer.css">
-  <script src="/libraries/jquery/jquery.min.js"></script>
+  <link rel="stylesheet" href="/libs/@primer/css/primer.css">
+  <script src="/libs/jquery/jquery.min.js"></script>
 
   <title>Chat{{#if title}} | {{title}}{{/if}}</title>
 </head>
