docs: update url [skip ci]

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
   {{{ body }}}
 
   <footer class="text-center text-gray-light">
-    <div>Copyright &copy; 2020 - 2022, <a href="https://eidoriantan.tk">@eidoriantan</a></div>
+    <div>Copyright &copy; 2020 - 2022, <a href="https://eidoriantan.me">@eidoriantan</a></div>
   </footer>
 </body>
 </html>
